# projectNUCLEUS

./: .gitignore  PHASES.md  README.md  rust-toolchain.toml
.forgejo/workflows/: ci.yml
.github/workflows/: notify-sporeprint.yml
deploy/: abg_accounts.sh  abg_data.sh  darkforest_fuzz.py  darkforest_pentest.sh  deploy.sh  deploy_beardog_tls_shadow.sh  deploy_btsp_auth_shadow.sh  deploy_graph.sh  deploy_health_check.sh  deploy_knot_dns.sh  deploy_primal_start.sh  deploy_songbird_relay.sh  external_validation.sh  forgejo_mirror.sh  gate_manifest.toml  gate_provision.sh  gate_switch.sh  gate_watchdog.sh  jupyterhub_btsp_auth.py  jupyterhub_tier_test.py  membrane_provenance.sh  membrane_summary.sh  membrane_telemetry.sh  nucleus_config.sh  nucleus_paths.py  observer_server.py  observer_theme.css  pappusCast.py  provenance_pipeline.sh  publish_sporeprint.sh  rotate_cookie_secret.sh  routing_config.toml  security_validation.sh  signal_executor.sh  sporeprint_dns.sh  sporeprint_local.sh  sporeprint_verify.sh  switch_to_static_observer.sh  tier_enforcement_test.sh  tier_test_all.sh  (+5 more)
deploy/cloudflare/: access_setup.sh
deploy/cloudflared/: config-full.yml  config-static.yml
deploy/legacy/: deploy.sh  deploy_graph.sh  deploy_health_check.sh  deploy_knot_dns.sh  deploy_primal_start.sh  deploy_songbird_relay.sh  gate_provision_cloudflared.sh  membrane_provenance.sh  membrane_summary.sh  membrane_telemetry.sh  (+1 more)
deploy/nucleus-deploy/: Cargo.toml  deny.toml
deploy/nucleus-deploy/graphs/: nucleus_complete.toml  tower_atomic.toml
deploy/nucleus-deploy/src/: config.rs  deploy.rs  dns.rs  main.rs  process.rs  provenance.rs  provision.rs  rpc.rs  security.rs  spore.rs  summary.rs  telemetry.rs  util.rs  verify.rs
deploy/nucleus-deploy/src/provenance/: manifest.rs  mod.rs
deploy/nucleus-deploy/src/security/: above.rs  at.rs  below.rs  external.rs  helpers.rs  mod.rs  report.rs
deploy/nucleus-deploy/src/spore/: mod.rs  trio.rs
deploy/nucleus-primals/: Cargo.toml  deny.toml
deploy/nucleus-primals/src/: lib.rs
docs/: BONDING_MODELS.md  FAMILY_HPC_MODEL.md  NUCLEUS_PRIMER.md
experiments/: README.md
gates/: biomegate.toml  flockgate.toml  graphenegate.toml  irongate.toml  northgate.toml  nuc-intake.toml  strandgate.toml  westgate.toml
genomeBin/: cas-upload.sh  harvest.sh  manifest.toml
graphs/: README.md  basement_hpc_covalent.toml  footprint_composition.toml  friend_remote_covalent.toml  graphene_portable.toml  ionic_capability_share.toml  nest_atomic.toml  node_atomic.toml  node_atomic_compute.toml  nucleus.toml  nucleus_complete.toml  rootpulse_commit.toml  sovereignty_shadow.toml  sporeprint_composition.toml  strand_heavy_compute.toml  tower_agent.toml  tower_atomic.toml  west_cold_storage.toml
notebooks/: spring-validation-template.ipynb
specs/: CI_EVALUATION.md  COMPLETE_DEPENDENCY_INVENTORY.md  COMPOSITION_CONTRACT.md  DARKFOREST_OUTER_MEMBRANE_REPORT.md  EVOLUTION_GAPS.md  EXECUTION_MODEL.md  FUZZ_EVOLUTION.md  GATE_PORTABILITY.md  INVISIBILITY_STANDARD.md  LIVE_SCIENCE_API.md  NOTEBOOK_ELEVATION.md  PROVENANCE_CONTRACT.md  README.md  SCIENCE_DISPATCH_MAP.md  SECURITY_VALIDATION.md  SHARED_WORKSPACE.md  SOVEREIGNTY_VALIDATION_PROTOCOL.md  TIER2_CEREMONY_DESIGN.md  TIERED_ACCESS_ARCHITECTURE.md  TRANSPORT_MATRIX.md  TUNNEL_EVOLUTION.md  VALIDATION_PLAYBOOK.md  VALIDATION_RESULTS.md
validation/: ABG_FULL_PIPELINE_RESULTS.md  COMPOSITION_GAPS.md  COMPOSITION_VALIDATION_LOG.md  EXTERNAL_PIPELINE_VALIDATION_MAY06_2026.md  JUPYTERHUB_PATTERNS_HANDBACK.md  NESTGATE_CONTENT_GAPS_HANDBACK.md  PENTEST_AND_VALIDATION_PHASE2A_MAY07_2026.md  PETALTONGUE_GAPS_HANDBACK.md  PHASE59_ABSORPTION_MAY06_2026.md  PRIMAL_DEEP_DEBT_HANDBACK.md  REVALIDATION_PHASE60_MAY08_2026.md  ROOTPULSE_GAPS_HANDBACK.md  SECURITY_HANDBACK_MAY06_2026.md  UPSTREAM_GAPS_HANDBACK_MAY06_2026.md  dark_forest_gate_local.sh  darkforest_membrane.sh  gate_trust_validator.sh
validation/darkforest/: Cargo.toml  deny.toml
validation/darkforest/src/: check.rs  crypto.rs  discovery.rs  fuzz.rs  main.rs  net.rs  observer.rs  pentest.rs  report.rs
validation/darkforest/src/crypto/: filesystem.rs  keys.rs  mod.rs  protocol.rs
validation/darkforest/src/outer/: depot.rs  dns.rs  forge.rs  http.rs  mesh.rs  mod.rs  tls.rs
validation/darkforest/src/pentest/: compute.rs  external.rs  mod.rs  readonly.rs
validation/tunnelKeeper/: Cargo.toml  README.md  deny.toml
validation/tunnelKeeper/src/: api.rs  config.rs  crypto.rs  health.rs  main.rs  transport.rs
(+266 files in other folders)
