# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "nucleus-deploy"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "AGPL-3.0-or-later"
description = "Deploy, validate, and prove provenance for NUCLEUS gate compositions"

[[bin]]
name = "nucleus-deploy"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "time", "process", "fs"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
toml = "0.8"
nucleus-primals = { path = "../nucleus-primals" }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
