# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "nucleus-primals"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "AGPL-3.0-or-later"
description = "Shared primal registry — single source of truth for slug/env/port mappings"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
