[package]
name = "darkforest"
version = "0.1.0"
edition = "2024"
description = "Dark Forest security validator — pure Rust pen test + fuzz for NUCLEUS primals and JupyterHub"
license = "AGPL-3.0-or-later"

[[bin]]
name = "darkforest"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
module_name_repetitions = "allow"

[profile.release]
strip = true
lto = true
