[package]
name = "darkforest"
version = "0.2.1"
edition = "2024"
description = "Dark Forest — auditable security validator for NUCLEUS primals, JupyterHub, and crypto posture"
license = "AGPL-3.0-or-later"

[[bin]]
name = "darkforest"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
too_many_lines = "allow"
cast_precision_loss = "allow"

[profile.release]
strip = true
lto = true
