[package]
name = "darkforest"
version = "0.3.0"
edition = "2024"
description = "Dark Forest — auditable security validator for NUCLEUS inner and outer membrane"
license = "AGPL-3.0-or-later"

[[bin]]
name = "darkforest"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
nucleus-primals = { path = "../../deploy/nucleus-primals" }
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
webpki-roots = "1"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
too_many_lines = "allow"
cast_precision_loss = "allow"

[profile.release]
strip = true
lto = true
