[package]
name = "tunnel-keeper"
version = "0.1.0"
edition = "2024"
description = "Tunnel Keeper — Pure Rust Cloudflare tunnel manager with BearDog crypto and Songbird transport evolution path"
license = "AGPL-3.0-or-later"

[[bin]]
name = "tunnelKeeper"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
chacha20poly1305 = "0.10"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
module_name_repetitions = "allow"

[profile.release]
strip = true
lto = true
